# unit-converter-cli

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: builder.md  planner.md  reviewer.md  tester.md
.claude/hooks/: run-tests.sh
.claude/skills/new-project/: SKILL.md
.github/workflows/: claude-review.yml  claude.yml
src/unit_converter/: __init__.py  cli.py  conversions.py
tests/: test_cli.py  test_conversions.py
